--- a/js/system.css
+++ b/js/system.css
@@ -13,27 +13,48 @@ body {
 	min-height: 300px;
 	padding:15px;
 	color:#fff;
+	overflow: hidden;
 }
 .profile_tab a {
 	cursor: pointer !important;
 }
-
+/*/*
 /* Animate -> Profile __ Tabs*/
 
-/* SCALE TRANSITIONS, BEST TO COBMINE WITH FADE/OPACITY */
 .profile_animate.ng-enter, .profile_animate.ng-leave {
-    position: absolute;
-    -webkit-animation-duration: 0.4s;
-    animation-duration: 0.4s;
+      left: 0;
+  right: 0;
+  -webkit-transition:all .5s ease-in-out;
+    -moz-transition:all .5s ease-in-out;
+    -o-transition:all .5s ease-in-out;
+    transition:all .5s ease-in-out;
 }
 .profile_animate.ng-enter {
-   -webkit-animation-name: fadeInDown;
-   animation-name: fadeInDown;
+  -webkit-transform: translate3d(100%, 0, 0);
+     -moz-transform: translate3d(100%, 0, 0);
+       -o-transform: translate3d(100%, 0, 0);
+          transform: translate3d(100%, 0, 0);
+}
+
+.profile_animate.ng-enter-active {
+  -webkit-transform: translate3d(0, 0, 0);
+     -moz-transform: translate3d(0, 0, 0);
+       -o-transform: translate3d(0, 0, 0);
+          transform: translate3d(0, 0, 0);
 }
 
 .profile_animate.ng-leave {
-   -webkit-animation-name: fadeOutDown;
-   animation-name: fadeOutDown;
+  -webkit-transform: translate3d(0, 0, 0);
+     -moz-transform: translate3d(0, 0, 0);
+       -o-transform: translate3d(0, 0, 0);
+          transform: translate3d(0, 0, 0);
+}
+
+.profile_animate.ng-leave-active {
+  -webkit-transform: translate3d(-100%, 0, 0);
+     -moz-transform: translate3d(-100%, 0, 0);
+       -o-transform: translate3d(-100%, 0, 0);
+          transform: translate3d(-100%, 0, 0);
 }
 
 
