--- a/application/profile/less/account.css
+++ b/application/profile/less/account.css
@@ -29,22 +29,132 @@
 	text-align: right;
 	font-size:12px;
 }
+.repeater .top-section {
+	min-height:34px;
+	overflow: hidden
+}
 
+.thing-leaving {
+	font-size: 17px;
+	padding: 4px 0;
+}
+
+
+.ng-hide { /* prevents flahes */
+	display: none;
+}
+.ng-hide.ng-hide-add { /* stops disapearing instantly */
+	display: block;
+}
 /* when hiding the thing */
-.ng-hide-add         { 
-          animation-name: slideOutUp;
-          -webkit-animation-name: slideOutUp;
+
+.thing-appearing.ng-hide-remove         { 
+	-webkit-backface-visibility: hidden;
+	-webkit-animation-name: dostuff;
+  	-webkit-animation-duration: .75s;
 }
-    /*-webkit-animation-name: flipOutX;*/
-
-/* when showing the thing */
-.ng-hide-remove      { 
-	/*animation-name:slideInRight;*/
-	/*-webkit-animation-name:slideInRight;*/
-
-    /*-webkit-animation-name: flipInX;*/
-  /*-webkit-animation:0.5s flipInX ease; */
-  /*animation:0.5s flipInX ease; */
+.thing-appearing.ng-hide-add       { 
+    backface-visibility: hidden;
+    -webkit-animation-name: dothereverse;
+  	-webkit-animation-duration: .75s;
+}
+/*	  -webkit-animation-name: dostuff;
+          animation-name: dostuff;
+  -webkit-animation-duration: .75s;
+          animation-duration: .75s;*/
+.thing-leaving.ng-hide-remove        { 
+	    backface-visibility: hidden;
+    -webkit-animation-name: dostuff;
+  	-webkit-animation-duration: .75s;
+}
+.thing-leaving.ng-hide-add        { 
+	    backface-visibility: hidden;
+    -webkit-animation-name: dothereverse;
+  	-webkit-animation-duration: .75s;
 }
 
-/**/
+
+
+.animated.flip {
+
+  -webkit-animation-name: flip;
+          animation-name: flip;
+}
+
+@-webkit-keyframes dostuff {
+/*  0%, 20%, 40%, 60%, 80%, 100% {
+    -webkit-transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+            transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+  }*/
+
+
+/*@-webkit-keyframes flipInX {*/
+  0% {
+    -webkit-transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+            transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+/*    -webkit-transition-timing-function: ease-in;
+            transition-timing-function: ease-in;*/
+    opacity: 0;
+  }
+
+  40% {
+    -webkit-transform: perspective(400px) rotate3d(1, 0, 0, 60deg);
+            transform: perspective(400px) rotate3d(1, 0, 0, 60deg);
+/*    -webkit-transition-timing-function: ease-in;
+            transition-timing-function: ease-in;*/
+  }
+
+  60% {
+    -webkit-transform: perspective(400px) rotate3d(1, 0, 0, 40deg);
+            transform: perspective(400px) rotate3d(1, 0, 0, 40deg);
+   
+  }
+
+  80% {
+    -webkit-transform: perspective(400px) rotate3d(1, 0, 0, 20deg);
+            transform: perspective(400px) rotate3d(1, 0, 0, 20deg);
+  }
+
+  100% {
+    -webkit-transform: perspective(400px) rotate3d(1, 0, 0, 0deg);
+            transform: perspective(400px) rotate3d(1, 0, 0, 0deg);
+     opacity: 1;
+  }
+}
+
+@-webkit-keyframes dothereverse {
+
+  0% {
+  		-webkit-transform: perspective(400px) rotate3d(1, 0, 0, 0deg);
+        transform: perspective(400px) rotate3d(1, 0, 0, 0deg);
+/*    -webkit-transition-timing-function: ease-in;
+            transition-timing-function: ease-in;*/
+    opacity: 1;
+  }
+
+  40% {
+    -webkit-transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+            transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+/*    -webkit-transition-timing-function: ease-in;
+            transition-timing-function: ease-in;*/
+  }
+
+  60% {
+    -webkit-transform: perspective(400px) rotate3d(1, 0, 0, -40deg);
+            transform: perspective(400px) rotate3d(1, 0, 0, -40deg);
+   
+  }
+
+  80% {
+    -webkit-transform: perspective(400px) rotate3d(1, 0, 0, -60deg);
+            transform: perspective(400px) rotate3d(1, 0, 0, -60deg);
+  }
+
+  100% {
+  	    -webkit-transform: perspective(400px) rotate3d(1, 0, 0, -90deg);
+            transform: perspective(400px) rotate3d(1, 0, 0, -90deg);
+
+     opacity: 0;
+  }
+}
+
