--- a/application/system.css
+++ b/application/system.css
@@ -11,9 +11,11 @@ body {
 
 
 .system .navbar-default {
-background-color: #0D0C12;
-border-color: #e7e7e7;
-border-top: 1px solid #000;
+background-color: #16201E;
+/* border-color: #e7e7e7; */
+/* border-top: 1px solid #000; */
+border-top: #76C2B2 1px solid;
+border-bottom: 0px;
 }
 
 
