--- a/application/profile/less/account.css
+++ b/application/profile/less/account.css
@@ -2,10 +2,9 @@
   padding-bottom:30px;
 }
 
-          a.navbar-brand.logo-intro {
-            box-shadow: 0 0 16px px inset #d8ccd8 ;
-          
-          } 
+a.navbar-brand.logo-intro {
+  box-shadow: 0 0 16px px inset #d8ccd8 ;
+} 
 
 
 
@@ -13,6 +12,7 @@
 .mything .another h1 {
   backgroud: #543543;
 }
+
 .mything .another p {
   backgroud: #543543;
 }
@@ -23,6 +23,7 @@
   margin:0;
   float: left;
 }
+
 .block ul li {
   margin:0 15px 15px 0;
   display: inline;
@@ -59,6 +60,7 @@ margin-right:15px;
 	background:white;
 	padding:15px;
   float: left;
+  width: 100%;
 }
 .repeater {
 background: #16201E;
