--- a/application/system.css
+++ b/application/system.css
@@ -9,7 +9,9 @@ body {
 .ui-view-container {
   margin-top:50px;
 }
-
+h1,h2,h3,h4,h5,h6,p,a,span {
+  font-family: 'PT Sans Narrow', sans-serif !important;
+}
 
 .system .navbar-default {
 background-color: #16201E;
@@ -19,8 +21,11 @@ border-top: #76C2B2 1px solid;
 border-bottom: 0px;
 }
 
+/*font-family: 'Abril Fatface', cursive;*/
 
-
+.page-view .container:first-of-type{
+  margin-top:100px;
+}
 .home-welcome {
   background:url('system/images/swords2.jpg');
   background-size: cover;
